--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -43,48 +43,61 @@
         align-items: center;
         padding: 5px;
         cursor: pointer;
+        margin: 8px 2px;
 
-        &:hover {
-          background-color: #ece8ff;
-        }
+        // &:hover {
+        //   background-color: #ece8ff;
+        // }
 
         .icon {
-          font-size: 18px;
-          color: #7451f8;
+          // font-size: 28px;
+          // color: black;
+          &:hover {
+            color: #f18f71;
+          }
         }
 
-        span{
-            font-size: 13px;
-            font-weight: 600;
-            color: #888;
-            margin-left: 10px;
+        span {  
+          font-size: 15px;
+          font-weight: 400;
+          color: #888;
+          margin-left: 10px;
+          &:hover {
+            color: #f18f71;
+          }
         }
       }
     }
   }
 
-  .bottom{
-      display: flex;
-      align-items: center;
-      margin: 10px;
+  .bottom {
+    display: flex;
+    align-items: center;
+    margin: 10px;
 
-      .colorOption{
-          width: 20px;
-          height: 20px;
-          border-radius: 5px;
-          border: 1px solid #7451f8;
-          cursor: pointer;
-          margin: 5px;
+    .colorOption {
+      width: 20px;
+      height: 20px;
+      border-radius: 5px;
+      border: 1px solid #7451f8;
+      cursor: pointer;
+      margin: 5px;
 
-          &:nth-child(1){
-              background-color: whitesmoke;
-          }
-          &:nth-child(2){
-              background-color: #333;
-          }
-          &:nth-child(3){
-              background-color: darkblue;
-          }
+      &:nth-child(1) {
+        background-color: whitesmoke;
       }
+      &:nth-child(2) {
+        background-color: #333;
+      }
+      &:nth-child(3) {
+        background-color: darkblue;
+      }
+    }
   }
+}
+// .svg_icons {
+//   transform: scale(1.8);
+// }
+
+@media (min-width: 640px) {
 }
