--- a/src/components/sidebar/responsivesidebar.css
+++ b/src/components/sidebar/responsivesidebar.css
@@ -1,4 +1,4 @@
-#header {
+/* #header {
     position: absolute;
     width: 220px;
   }
@@ -65,4 +65,4 @@
     html {
       overflow: hidden;
     }
-  }
+  } */
