dark mode bug fixes

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -58,7 +58,8 @@
 
   .datatable {
     .datagrid {
-      color: gray;
+      color: white;
+      background-color: #2e2f31;
       border: none;
 
       .viewButton,
